# ikari

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  rust-toolchain  serve.json  web.html
.cargo/: config.toml
build-web/: Cargo.toml
build-web/src/: ikari-web.template.html  index.template.html  main.rs
build_web/: Cargo.toml
build_web/src/: ikari-web.template.html  main.rs
clikari/: Cargo.toml
clikari/src/: main.rs  skybox_processor.rs  texture_compressor.rs
example_game/: Cargo.toml
example_game/src/: ball.rs  character.rs  game.rs  game_state.rs  main.rs  physics_ball.rs  revolver.rs  ui_overlay.rs
ikari/: Cargo.toml
ikari/src/: animation.rs  asset_loader.rs  audio.rs  ball.rs  buffer.rs  camera.rs  character.rs  collisions.rs  engine_state.rs  file_loader.rs  file_loader_native.rs  file_loader_wasm.rs  file_manager.rs  framerate_limiter.rs  game.rs  game_state.rs  gameloop.rs  gltf_loader.rs  lib.rs  light.rs  math.rs  mesh.rs  mutex.rs  physics.rs  physics_ball.rs  player_controller.rs  profile_dump.rs  raw_image.rs  renderer.rs  revolver.rs  sampler_cache.rs  scene.rs  scene_tree.rs  skinning.rs  texture.rs  texture_compression.rs  thread.rs  time.rs  time_tracker.rs  transform.rs  (+4 more)
ikari/src/asset_optimizer/: asset_optimizer.rs  main.rs
ikari/src/example_game/: main.rs
ikari/src/models/gltf/ColtPython/: colt_python.gltf
ikari/src/models/gltf/MartensSurface/: MartensSurface.blend  MartensSurface.glb  MartensSurface.gltf
ikari/src/models/gltf/NormalTangentMirrorTest/: NormalTangentTest_Normal_compressed.bin.bak
ikari/src/models/gltf/TestLevel/: test_level.gltf
ikari/src/models/gltf/TextureCoordinateTest/: TextureCoordinateTest.gltf
ikari/src/models/gltf/Triangle/: Triangle.gltf
ikari/src/models/gltf/free_low_poly_forest/: license.txt  scene.gltf
ikari/src/shaders/: blit.wgsl  skybox.wgsl  textured_mesh.wgsl  unlit_mesh.wgsl
ikari/src/sounds/: Recording.m4a
ikari_cli/: Cargo.toml
ikari_cli/src/: main.rs  texture_compressor.rs
run-wasm/: Cargo.toml
src/: animation.rs  asset_loader.rs  audio.rs  ball.rs  blit.wgsl  buffer.rs  camera.rs  camera_controller.rs  character.rs  collisions.rs  controls.rs  default_textures.rs  enemy.rs  file_loader.rs  flat_color_mesh_shader.wgsl  game.rs  game_scene.rs  game_state.rs  gameloop.rs  gltf_conv.rs  gltf_loader.rs  helpers.rs  lib.rs  light.rs  logger.rs  main.rs  math.rs  mesh.rs  photosphere_skybox_shader.wgsl  physics.rs  physics_ball.rs  player_controller.rs  render_scene.rs  renderer.rs  revolver.rs  sampler_cache.rs  scene.rs  scene_tree.rs  skinning.rs  skybox_shader.wgsl  (+7 more)
src/asset_optimizer/: main.rs
src/audio_decoder_perf/: main.rs
src/example_game/: main.rs
src/models/gltf/Arrow/: Arrow.glb  Arrow.gltf
src/models/gltf/DamagedHelmet/: DamagedHelmet.glb
src/models/gltf/EnvironmentTest/: EnvironmentTest.glb
src/models/gltf/LegendaryRobot/: Legendary_Robot.gltf
src/models/gltf/Revolver/: revolver_low_poly.glb  revolver_low_poly.gltf
src/models/gltf/SimpleMeshes/: SimpleMeshes.glb  SimpleMeshes.gltf
src/models/gltf/TestLevel/: test_level.glb  test_level.gltf
src/models/gltf/TextureCoordinateTest/: TextureCoordinateTest.glb
src/models/gltf/TextureLinearInterpolationTest/: TextureLinearInterpolationTest.glb
src/models/gltf/Triangle/: Triangle.glb
src/models/gltf/TriangleWithoutIndices/: TriangleWithoutIndices.glb
src/models/gltf/VC/: VC.glb
src/models/gltf/VertexColorTest/: VertexColorTest.glb
src/shaders/: blit.wgsl  flat_color_mesh.wgsl  flat_color_mesh_shader.wgsl  photosphere_skybox_shader.wgsl  skybox.wgsl  skybox_shader.wgsl  textured_mesh.wgsl  textured_mesh_shader.wgsl  unlit_mesh.wgsl
survival-shooter/: Cargo.toml
survival-shooter/src/: ball.rs  camera.rs  gameloop.rs  helpers.rs  instanced_mesh_shader.wgsl  logger.rs  main.rs  mesh.rs  renderer.rs  texture.rs  texture_shader.wgsl  textured_mesh_shader.wgsl  transform.rs
