[workspace]
resolver = "2"
members = ["ikari", "build_web", "example_game", "clikari"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.66"
description = "3D Game Engine"
keywords = ["renderer", "3D", "rust", "wgpu", "game"]
license = "MIT"
repository = "https://github.com/Davidster/ikari"
categories = ["rendering", "game framework", "gamedev"]
authors = [
  "David Huculak https://github.com/Davidster",
  "Ikari Contributors https://github.com/Davidster/ikari/graphs/contributors",
]

[workspace.dependencies]
winit = { version = "0.29", git = "https://github.com/iced-rs/winit.git", rev = "b91e39ece2c0d378c3b80da7f3ab50e17bb798a5" }
ikari = { version = "0.0.1", path = "./ikari" }
log = "0.4"
wgpu = { version = "0.19" }
wgpu-profiler = { git = "https://github.com/Davidster/wgpu-profiler", branch = "fix_test_and_wasm_build" }
anyhow = { version = "1.0", features = ["backtrace"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
profiling = "1.0.11"
image = { version = "0.24", default-features = false, features = [
  "hdr",
  "jpeg",
] }
gltf = "1.3"
pico-args = "0.5.0"
lazy_static = "1.4"
glam = { version = "0.24.1", features = ["approx", "bytemuck"] }
rand = { version = "0.8", features = ["small_rng"] }
pollster = "0.3"

# wasm32 depdendencies
web-sys = { version = "0.3.64", features = [
  "Document",
  "Window",
  "Element",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Blob",
  "WorkerGlobalScope",
] }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.37"

iced = { git = "https://github.com/Davidster/iced.git", branch = "master", features = [
  "canvas",
] }
iced_wgpu = { git = "https://github.com/Davidster/iced.git", branch = "master" }
iced_winit = { git = "https://github.com/Davidster/iced.git", branch = "master" }

[patch.crates-io]
iced_core = { git = "https://github.com/Davidster/iced.git", branch = "master" }
iced_style = { git = "https://github.com/Davidster/iced.git", branch = "master" }
iced_renderer = { git = "https://github.com/Davidster/iced.git", branch = "master" }
iced_graphics = { git = "https://github.com/Davidster/iced.git", branch = "master" }
iced_widget = { git = "https://github.com/Davidster/iced.git", branch = "master" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."wgpu-core"]
debug-assertions = false

[profile.dev.package."wgpu-types"]
debug-assertions = false

# [profile.dev.package."wgpu"]
# debug-assertions = false

# [profile.dev.package."wgpu-hal"]
# debug-assertions = false

# [profile.dev.package."wgpu-types"]
# debug-assertions = false

[profile.release]
debug = true
