[workspace]
resolver = "2"
members = ["ikari", "build_web", "example_game", "clikari"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.66"
description = "3D Game Engine"
keywords = ["renderer", "3D", "rust", "wgpu", "game"]
license = "MIT"
repository = "https://github.com/Davidster/ikari"
categories = ["rendering", "game framework", "gamedev"]
authors = [
  "David Huculak https://github.com/Davidster",
  "Ikari Contributors https://github.com/Davidster/ikari/graphs/contributors",
]

[workspace.dependencies]
winit = { version = "0.29", git = "https://github.com/iced-rs/winit.git", rev = "b91e39ece2c0d378c3b80da7f3ab50e17bb798a5" }
ikari = { version = "0.0.1", path = "./ikari" }
log = "0.4"
wgpu = { version = "0.19", features = ["trace"] }
wgpu-profiler = { version = "0.16.1", features = ["tracy"] }
anyhow = { version = "1.0", features = ["backtrace"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
profiling = "1.0.11"
image = { version = "0.24", default-features = false, features = [
  "hdr",
  "jpeg",
] }
gltf = "1.3"
pico-args = "0.5.0"
lazy_static = "1.4"
glam = { version = "0.24.1", features = ["approx", "bytemuck"] }
rand = { version = "0.8", features = ["small_rng"] }
pollster = "0.3"

# wasm32 depdendencies
web-sys = { version = "0.3.64", features = [
  "Document",
  "Window",
  "Element",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Blob",
  "WorkerGlobalScope",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "HtmlCollection",
] }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.37"

iced = { version = "0.12", features = ["canvas"] }
iced_wgpu = "0.12"
iced_winit = "0.12"

[patch.crates-io]
winit = { version = "0.29", git = "https://github.com/iced-rs/winit.git", rev = "b91e39ece2c0d378c3b80da7f3ab50e17bb798a5" }
tracing-tracy = { path = "../rust_tracy_client_fork/tracing-tracy" }
tracy-client = { path = "../rust_tracy_client_fork/tracy-client" }
tracy-client-sys = { path = "../rust_tracy_client_fork/tracy-client-sys" }
wgpu-profiler = { path = "../wgpu-profiler-fork" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
