[package]
name = "build-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arboard = "3.2.0"
pico-args = "0.5.0"
# TODO: versions 0.2.86 and 0.2.87 seemed to cause an OOM panic when loading a huge
# audio samples array (> 100MB). try to find out which wasm bindgen version
# causes this and open a bug report? Also, why doesn't changing this version number affect
# the Cargo.lock file?
wasm-bindgen-cli-support = "0.2.87"
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
