[package]
name = "build_web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "build_web"
path = "src/main.rs"

[dependencies]
arboard = "3.2.1"
pico-args.workspace = true
wasm-bindgen-cli-support = "0.2.87"
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
