[package]
name = "build_web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "build_web"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard = "3.4.0"
pico-args.workspace = true
wasm-bindgen-cli-support = "0.2.92"
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
