[package]
name = "example_game"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "example_game"
path = "src/main.rs"

[features]
default = ["cpu-profiling", "gpu-profiling"]
cpu-profiling = [
  "ikari/tracy-profiling",
  "profiling/profile-with-tracy",
  "dep:tracing-tracy",
]
gpu-profiling = ["ikari/gpu-profiling"]
memory-profiling = []

[dependencies]
winit.workspace = true
ikari.workspace = true
log.workspace = true
wgpu.workspace = true
wgpu-profiler.workspace = true
anyhow.workspace = true
env_logger.workspace = true
profiling.workspace = true
glam.workspace = true
rand.workspace = true
lazy_static.workspace = true
image.workspace = true
iced.workspace = true
iced_wgpu.workspace = true
iced_winit.workspace = true
tracing-tracy = { version = "0.10.3", features = ["ondemand"], optional = true }

plotters-iced = "0.10.0"
plotters = { version = "0.3.5", default-features = false, features = [
  "line_series",
] }

iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", rev = "ed594559ac8f5d84c5931a850663f1d17571aa80", default-features = false, features = [
  "modal",
  "card",
  "floating_element",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
