[package]
name = "survival-shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
image = "0.23.14"
obj-rs = "0.7.0"
wavefront_obj = "10.0.0"
wgpu = "0.12.0"
winit = "0.26.1"
log = "0.4"
pollster = "0.2.5"
env_logger = "0.9.0"
bytemuck = { version = "1.7.3", features = [ "derive" ] }
cgmath = "0.18.0"
